@@ -10,6 +10,10 @@ Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey, Dion Whitehead
 and Marcelo Vanzin for contributing to this release.
 
 {{{ Bug fixes
+- Removed workaround in drag & drop code of TextArea that doesn't seem
+  useful anymore on Ubuntu and cause exceptions when dropping a Transferable
+  that is not a String but has a java.io.InputStream as representation class
+  (Matthieu Casanova)
 
 - Fixed caret going to the wrong position when adding explicit folds
   in a buffer that uses an edit mode that has no line comment
